# ComfyUI-XingLiu

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
locales/zh/: main.json  nodeDefs.json
nodes/: auth.py  image2image.py  kling2Video.py  makeControlNet.py  makeHiResFix.py  makeImageList.py  makeLora.py  saveImage.py  text2image.py  uploadLibLib.py
server/: generateServer.py  getF1AnnotationParameters.py  getModel.py  imagesUtils.py  mediaUtils.py  uploadLibLib.py
