[project]
name = "ComfyUI-XingLiu"
description = "A ComfyUI node that integrates LibLib's text-to-image and image-to-image generation capabilities, with customizable ControlNet and Lora support."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/NewNoviceChen/ComfyUI-XingLiu"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "novice-chen"
DisplayName = "ComfyUI-XingLiu"
Icon = ""
includes = []
